<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CleanUp</string>
    <string name="action_settings">Perfil</string>
    <string name="address">Address</string>
    <string name="carregando">Carregando...</string>
    <string name="conexao">Falha na conexão!</string>
    <string name="logout">Logout</string>
    <string name="classificaServico">Avalie o serviço:</string>

    <!-- Mensagens -->
    <string name="msgFormularioVazio">Por favor preencher o formulário </string>
    <string name="msgSenhaInvalido">Digite uma senha (Min 8, Max 14)</string>
    <string name="msgCpfInvalido">Por favor digite um CPF válido </string>
    <string name="msgEmailInvalido">Por favor digite um Email válido </string>
    <string name="msgCadastroRealizado">Cadastro Realizado</string>
    <string name="msgCpfCadastrado">CPF já cadastrado</string>
    <string name="msgEmailCadastrado">Email já cadastrado</string>
    <string name="msgLoginSucesso">Login realizado com sucesso</string>
    <string name="msgLoginErrado">Senha ou email errado.</string>
    <string name="msgDeErroWebservice">Ocorreu um erro de conexão com servidor. Tente novamente.</string>
    <string name="msgServicoSolicitado">Serviço solicitado com sucesso.</string>
    <string name="msgServicoAvaliacao">Serviço avaliado com sucesso.</string>
    <string name="msgServicoDataEndereco">Por favor selecionar uma data e informe um endereço.</string>
    <string name="msgServicoData">Por favor selecionar uma data.</string>
    <string name="msgServicoEndereco">Por favor informar um endereço.</string>
    <string name="msgSucessoPerfil">Perfil alterado com sucesso.</string>

    <!-- TextView -->
    <string name="tvNome">Nome</string>
    <string name="tvSobrenome">Sobrenome</string>
    <string name="tvEmail">Email</string>
    <string name="tvSenha">Senha</string>
    <string name="tvCpf">CPF</string>
    <string name="tvTelefone">Telefone</string>
    <string name="tvCidade">Cidade</string>
    <string name="tvEndereco">Endereço</string>
    <string name="tvTituloLogin">Login</string>
    <string name="tvTituloCadastro">Cadastro</string>
    <string name="tvLogout">Logout</string>
    <string name="tvLogo1">Encontrando diarista de maneira</string>
    <string name="tvLogo2">INTELIGENTE</string>
    <string name="tvErroAtualizar">Lista não atualizada.</string>
    <string name="tvRegistrar"><a href="#">Registrar</a></string>
    <string name="tvAvaliar"><a href="#">avaliar serviço</a></string>
    <string name="tvContratanteCliente">Cliente</string>
    <string name="tvContratanteDiarista">Diarista</string>

    <!-- Radio Button -->

    <string name="rbCliente">Cliente</string>
    <string name="rbDiarista">Diarista</string>

    <!-- Button -->
    <string name="btnLogin">Login</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnRegister">Cadastrar</string>
    <string name="btnConfirmar">Confirmar</string>

    <!-- CheckBox -->

    <string name="ckbLavar">Lavar</string>
    <string name="ckbPassar">Passar</string>
    <string name="ckbCozinhar">Cozinhar</string>
    <string name="ckbFaxinar">Faxinar</string>
    <string name="ckbBaba">Babá</string>

    <!-- EditTExt -->
    <string name="edtEndereco">Digite seu endereço</string>
    <string name="edtEmail">Digite seu email</string>
    <string name="edtSenha">Digite uma senha (Min 8, Max 14)</string>
    <string name="edtNome">Digite seu nome</string>
    <string name="edtSobrenome">Digite seu Sobrenome</string>
    <string name="edtCpf">Digite seu CPF</string>
    <string name="edtTelefone">Digite seu Telefone</string>
    <string name="edtSenhaLogin">Digite sua senha</string>
    <!-- Spinner -->

    <string-array name="spiCidade">
        <item>Recife</item>
        <item>Olinda</item>
        <item>Jaboatão</item>
        <item>Cabo</item>
        <item>Paulista</item>
    </string-array>

    <!-- Tittle Activity -->

    <string name="title_activity_main">Login</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_home_tabs">Home</string>
    <string name="title_activity_home_diarista">Home</string>
    <string name="title_activity_detalhe_diarista">Detalhe da Diarista</string>
    <string name="cliente">Cliente</string>
    <string name="diarista">Diarista</string>
    <string name="endereco">Endereço</string>
    <string name="descricao">Descrição</string>
    <string name="valor">Valor</string>
    <string name="classificar">Classificar</string>
    <string name="title_activity_home_cliente">HomeClienteActivity</string>
    <string name="title_activity_perfil_fragment">PerfilFragment</string>
    <string name="title_activity_perfil">PerfilActivity</string>
    <string name="title_activity_editar_perfil_cliente">Perfil</string>
    <string name="title_activity_editar_perfil_diarista">Perfil</string>

</resources>