<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dip" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/tvTituloCadastro"
            android:textSize="25sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/tipo_usuario"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_cliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/rbCliente" />

            <RadioButton
                android:id="@+id/radio_diarista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbDiarista" />
        </RadioGroup>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvNome" />

        <EditText
            android:id="@+id/registerName1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtNome" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvSobrenome" />

        <EditText
            android:id="@+id/registerName2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtSobrenome" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvCpf" />

        <EditText
            android:id="@+id/registerCPF"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtCpf"
            android:inputType="number" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvTelefone" />

        <EditText
            android:id="@+id/registerPhone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtTelefone"
            android:inputType="phone" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/address" />

        <EditText
            android:id="@+id/registerAddress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtEndereco"
            android:inputType="textMultiLine" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvCidade" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/spiCidade" />

        <!-- Email Label -->

        <LinearLayout
            android:id="@+id/specialty"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ckbPassar" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ckbLimpar" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ckbArrumar" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ckbFaxina" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ckbCozinhar" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvEmail" />

        <EditText
            android:id="@+id/registerEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtEmail"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="@string/tvSenha" />

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtSenha"
            android:inputType="textPassword"
            android:maxLength="14" />

        <TextView
            android:id="@+id/tvRegistroErro"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dip"
            android:textColor="#e30000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="#ff6347"
            android:onClick="registerUser"
            android:text="@string/btnRegister"
            android:textColor="#fff" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:onClick="navigatetoLoginActivity"
            android:text="@string/btnLogin"
            android:textColor="#228b22"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>